--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
     "react": "^18.3.1",
+    "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "react-slider": "^2.0.6"
